Add TimeoutManager and related messages
Wrote a TimeoutManager that should be able to receive requests to
monitor a timeout and return if that timeout has expired.

Currently, the TimeoutManager still needs to be able to receive a
stop monitoring message and remove the timeout from the monitored
messages list. However, this shouldn't be too hard. Just a declaration
of a message type and a separate handler for the runTimeoutManager
function.

BullyNode has not been constructed to use the TimeoutManager yet but
integration, again, shouldn't be too difficult (though it will probably
be non-trivial).

--- a/package.yaml
+++ b/package.yaml
@@ -24,6 +24,8 @@ dependencies:
 - network-transport-tcp
 - distributed-process
 - binary
+- binary-orphans
+- time
 
 library:
   source-dirs: src
@@ -40,6 +42,8 @@ executables:
     - network-transport-tcp
     - distributed-process
     - binary
+    - binary-orphans
+    - time
     - bully
 
 tests:
@@ -54,4 +58,6 @@ tests:
     - network-transport-tcp
     - distributed-process
     - binary
+    - binary-orphans
+    - time
     - bully
