--- a/stack.yaml
+++ b/stack.yaml
@@ -3,4 +3,5 @@ packages:
 - .
 extra-deps:
 - distributed-process-0.7.4@sha256:9e43cb9a27e976e3e4c054e783bdfbd6140760e70997448da66993f4674a6409
+- binary-orphans-0.1.8.0
 resolver: lts-9.21
